--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ h2{
     font-size: 200%;
 }
 
+h3{
+    font-style: normal;
+    display: block;
+    font-family: Verdana,Arial,sans-serif;
+    color: #FFF;
+}
 nav ul{
     display: flex;
     flex-wrap: nowrap;
