--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ form{
     padding-left: 1em; width: 80%;
     
 }
+/* HELP FROM TY  */
 @media (max-width:600px){
     body{
         background-color: #CEF1F2;
